--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,47 +1,47 @@
 /* Orbitron Font Family */
 @font-face {
-  font-family: 'Orbitron';
-  src: url('/fonts/Orbitron/Orbitron-Regular.ttf') format('truetype');
+  font-family: "Orbitron";
+  src: url("/fonts/Orbitron/Orbitron-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Orbitron';
-  src: url('/fonts/Orbitron/Orbitron-Medium.ttf') format('truetype');
+  font-family: "Orbitron";
+  src: url("/fonts/Orbitron/Orbitron-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Orbitron';
-  src: url('/fonts/Orbitron/Orbitron-SemiBold.ttf') format('truetype');
+  font-family: "Orbitron";
+  src: url("/fonts/Orbitron/Orbitron-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Orbitron';
-  src: url('/fonts/Orbitron/Orbitron-Bold.ttf') format('truetype');
+  font-family: "Orbitron";
+  src: url("/fonts/Orbitron/Orbitron-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Orbitron';
-  src: url('/fonts/Orbitron/Orbitron-ExtraBold.ttf') format('truetype');
+  font-family: "Orbitron";
+  src: url("/fonts/Orbitron/Orbitron-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Orbitron';
-  src: url('/fonts/Orbitron/Orbitron-Black.ttf') format('truetype');
+  font-family: "Orbitron";
+  src: url("/fonts/Orbitron/Orbitron-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
